--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,24 +13,29 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.8"
+
       - name: Install pipenv
         run: |
           python -m pip install --upgrade pipenv wheel
+
       - name: Install dependencies
         run: |
           pipenv install --deploy --dev
+
       - name: Move to flask folder
         run: |
           cd app
+
       - name: Run test suite
         run: |
           pipenv run pytest
 
-  format:
-    name: runner / black formatter
+  linter_name:
+    name: format 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
       - uses: rickstaa/action-black@v1
         with:
           black_args: ". --check"
