--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,11 +31,17 @@ jobs:
           pipenv run pytest
 
   linter_name:
-    name: format 
+    name: format
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - uses: rickstaa/action-black@v1
+      - name: Check files using the black formatter
+        uses: rickstaa/action-black@v1
+        id: action_black
         with:
-          black_args: ". --check"
+          black_args: "."
+      - name: Annotate diff changes using reviewdog
+        if: steps.action_black.outputs.is_formatted == 'true'
+        uses: reviewdog/action-suggester@v1
+        with:
+          tool_name: blackfmt
