--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 name: build
-on: push
+on: [push, pull_request]
 
 jobs:
   test:
@@ -13,15 +13,35 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: "3.8"
+
       - name: Install pipenv
         run: |
           python -m pip install --upgrade pipenv wheel
+
       - name: Install dependencies
         run: |
           pipenv install --deploy --dev
+
       - name: Move to flask folder
         run: |
           cd app
+
       - name: Run test suite
         run: |
           pipenv run pytest
+
+  linter_name:
+    name: format
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Check files using the black formatter
+        uses: rickstaa/action-black@v1
+        id: action_black
+        with:
+          black_args: "."
+      - name: Annotate diff changes using reviewdog
+        if: steps.action_black.outputs.is_formatted == 'true'
+        uses: reviewdog/action-suggester@v1
+        with:
+          tool_name: blackfmt
