--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,8 @@ jobs:
       - name: Run pytest coverage
         run: |
           cd app
-          pipenv run pytest --cov
+          pipenv run pytest --cov=.
+
 
   linter_name:
     name: format
