coverage report added

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,13 @@ jobs:
           cd app
           pipenv run pytest
 
+      - name: Build coverage file
+      run: |
+        pytest --cache-clear --cov=app test/ > pytest-coverage.txt
+
+      - name: Comment coverage
+      uses: coroo/pytest-coverage-commentator@v1.0.2
+
   pytest:
     name: pytest cov
     runs-on: ubuntu-latest
