--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ pluggy="1.0.0"
 py="1.11.0"
 pyparsing="3.0.9"
 pytest="7.2.0"
+pytest-cov = "1.0.2"
 python-dateutil="2.8.2"
 pytz="2022.5"
 requests="2.28.1"
