--- a/Pipfile
+++ b/Pipfile
@@ -22,8 +22,8 @@ pandas="1.5.1"
 pluggy="1.0.0"
 py="1.11.0"
 pyparsing="3.0.9"
-pytest="7.2.0"
-pytest-cov = "1.0"
+pytest="*"
+pytest-cov = "*"
 python-dateutil="2.8.2"
 pytz="2022.5"
 requests="2.28.1"
