pytest-coverage integrated

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,8 +58,7 @@ jobs:
 
       - name: Build coverage file
         run: |
-          pytest --cache-clear --cov=app app/tests/ > pytest-coverage.txt
-
+          pipenv run pytest --cache-clear --cov=app app/tests/ > pytest-coverage.txt
       - name: Comment coverage
         uses: coroo/pytest-coverage-commentator@v1.0.2
 
